:ambulance: Add required jvm option for allowing the database to access the LocalDate reflectively